@@ -39,10 +39,10 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.Writer;
 import java.net.InetSocketAddress;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.Formatter;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import org.apache.commons.io.FileUtils;
@@ -68,7 +68,7 @@ public class BackupBO extends AbstractBO {
         BackupType backupType = BackupType.FULL;
         BackupScope backupScope = this.getBackupScope();
 
-        LinkedList<String> list = new LinkedList<String>();
+        ArrayList<String> list = new ArrayList<String>();
         list.add(Constants.GLOBAL_SCHEMA);
 
         if (this.isGlobalSchema()) {
@@ -195,18 +195,18 @@ public class BackupBO extends AbstractBO {
         return this.dao.get(id);
     }
 
-    public LinkedList<BackupDTO> list() {
+    public ArrayList<BackupDTO> list() {
         return this.dao.list();
     }
 
     public BackupDTO getLastBackup() {
-        LinkedList<BackupDTO> list = this.dao.list(1);
+        List<BackupDTO> list = this.dao.list(1);
 
         if (list.size() == 0) {
             return null;
         }
 
-        return list.getFirst();
+        return list.get(0);
     }
 
     public boolean save(BackupDTO dto) {
